--- a/react-app/src/App.css
+++ b/react-app/src/App.css
@@ -20,3 +20,7 @@
   @apply bg-white dark:bg-slate-500
     text-black dark:text-white; 
 }
+
+.my-card {
+  @apply bg-white shadow-md rounded px-8 pt-6 pb-8 mb-4
+}
